--- a/0705/views/main.ejs
+++ b/0705/views/main.ejs
@@ -5,15 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script>
         let name = '<%= name %>'
         console.log(`프론트에서 받아온 값: ${name}`);
+
+        //라우터에서 쿼리스트링으로 값을 가져옴
+        $.ajax({
+            url: '/get-db',
+            method: 'post',
+            data: {id: 1},
+            dataType: 'json',
+            success: (getData) => {
+                console.log(getData);
+            },
+            error: (req, status, err) => {
+                console.error(`디비 테이블 가져오기 에러 ${req.status, req.responseText, err}`);
+            }
+        })
     </script>
 </head>
 <script>name</script>
 <body>
     <h1>
-        ㅎㅇㅎㅇ
+        <%= name %>
     </h1>
 </body>
 </html>
