--- a/0706/views/page1.ejs
+++ b/0706/views/page1.ejs
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ㅎㅇㅎㅇ</h1>
-    <a href = 
-        <button>move</button>
-    </a>
+    <h1>page one</h1>
 </body>
 </html>
