--- a/0706/views/main.ejs
+++ b/0706/views/main.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>ㅎㅇㅎㅇ</h1>
-    <a href = 
-        <button>move</button>
-    </a>
+    <form action = "/page_move" method = "get">
+        <button type = "submit">move</button>
+    </form>
 </body>
 </html>
