--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,24 +3,151 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <title>Thymeleaf</title>
     </head>
-    <body th:with="tt='hello world. My name is Jiwoong Kim'">
-        <h1>thymeleaf Test Page</h1><br>
-        <span th:text="${value}"></span><br>
-        <span [[${value}]]></span><br>
-        [[${value}]]
-        <ul>
-            <li id="test" th:text="${value}"></li>
-            <li>[[${value}]]</li>
-        </ul>
-        <input th:utext="${str}" type="text"><br>
-    <!-- 타임리프가 해석하지 않게 해줌, (th: inline) -->
-    <!-- 타임리프가 해석함 (escape), (th: text) -->
-    <!-- 타임리프가 해석함 (unescape), (th: utext) -->
-    <!-- 지역변수로 사용, (th: with="변수명="${}") -->
+    <body>
+        <!-- 메뉴바 -->
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" width="80"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">로그인</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">붕붕친구</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">냠냠친구</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">열공친구</a>
+                        </li>
+                    </ul>
+                    <span><input class="form-control me-2" type="text" placeholder="Search"></span><pre> </pre>
+                    <button class="btn btn-primary" type="button">검색</button>
+                </div>
+            </div>
+        </nav>
 
-    <!-- th:utext -->
+        <div class="m-4 d-flex row justify-content-center">
+            <div class="col">
+                <ul class="list-group">
+                    <li class="list-group-item">🚗붕붕친구</li>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="list-group">
+                    <li class="list-group-item">🥘냠냠친구</li>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="list-group">
+                    <li class="list-group-item">열공친구</li>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">내용</p>
+                            <a href="#" class="btn btn-primary">내용보기</a>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+        </div>
 
+        <div class="p-4 bg-dark text-white text-center">
+            <p>제작자: 김지웅</p>
+            <p>연락처: 010-1111-2222</p>
+            <p>인하공업전문대학 컴퓨터시스템과</p>
+        </div>
     </body>
 </html>
