model 생성 및 JPA 생성중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="col">
                 <ul class="list-group">
-                    <li class="list-group-item">열공친구</li>
+                    <li class="list-group-item">📖열공친구</li>
                     <div class="card">
                         <div class="card-body">
                             <p class="card-text">내용</p>
