회원가입 ajax js 작성

--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -81,13 +81,33 @@
     <script>
         let index = {
             init: function() {
-              $("#btn_save").on("click", () => {
-                  this.save();
-              });
+                $("#btn_save").on("click", () => {
+                    this.save();
+                })
             },
 
             save: function() {
+                let data = {
+                    username: $("#username").val(),
+                    password: $("#password").val(),
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    phone: $("#phone").val(),
+                    sex: $("#sex").val()
+                };
 
+                $.ajax({
+                    type: "POST",
+                    url: "/api/join",
+                    data: JSON.stringify(data),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json"
+                }).done(function (resp){
+                    alert("회원가입이 완료되었습니다.");
+                    location.herf= "/";
+                }).fail(function (error){
+                    alert(JSON.stringify(error));
+                });
             }
         }
 
