원시 회원가입 기능 구현

--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -104,7 +104,7 @@
                     dataType: "json"
                 }).done(function (resp){
                     alert("회원가입이 완료되었습니다.");
-                    location.herf= "/";
+                    location.herf= "/index";
                 }).fail(function (error){
                     alert(JSON.stringify(error));
                 });
