--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -18,23 +18,12 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">로그인</a>
+                        <a class="nav-link" href="/user/login">로그인</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user/join">회원가입</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">붕붕친구</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">냠냠친구</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">열공친구</a>
-                    </li>
                 </ul>
-                <span><input class="form-control me-2" type="text" placeholder="Search"></span><pre> </pre>
-                <button class="btn btn-primary" type="button">검색</button>
             </div>
         </div>
     </nav>
@@ -104,7 +93,7 @@
                     dataType: "json"
                 }).done(function (resp){
                     alert("회원가입이 완료되었습니다.");
-                    location.herf= "/index";
+                    location.href= "/";
                 }).fail(function (error){
                     alert(JSON.stringify(error));
                 });
