--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -18,10 +18,7 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/login">로그인</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/join">회원가입</a>
+                        <a class="nav-link" href="/auth/login">로그인</a>
                     </li>
                 </ul>
             </div>
@@ -87,7 +84,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/api/join",
+                    url: "/auth/join",
                     data: JSON.stringify(data),
                     contentType: "application/json; charset=utf-8",
                     dataType: "json"
