메인 페이지 생성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,24 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <script src="//code.jquery.com/jquery-3.5.1.js"></script>
     <title>메인</title>
 </head>
-<body>
-    THIS IS TEST PAGE
-</body>
+    <body>
+        <div class="header">
+            <div class="logo">
+                <a href="/"><img src="images/logo.png"></a>
+            </div>
+            <div class="header-menu">
+                <a href="#" class="active">로그인</a>
+                <a href="#">회원가입</a>
+                <a href="#"></a>
+            </div>
+            <div class="user">
+
+            </div>
+        </div>
+
+    </body>
 </html>
