--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,9 +3,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="//code.jquery.com/jquery-3.5.1.js"></script>
+    <title>로그인</title>
 </head>
 <body>
-    LOGIN PAGE
+    <header>
+
+    </header>
 </body>
 </html>
