--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
 * {
     outline: none;
@@ -9,34 +9,35 @@
     --body-bg-color: #e5ecef;
     --header-bg-color: #fff;
     --body-color: #2f2f33;
-    --body-font: "Poppins", sans-serif;
-}
-
-body {
-    background-color: var(--body-bg-color);
-    font-size: 15px;
-    color: var(--body-color);
-    font-family: var(--body-font);
-    margin: 0px;
+    --active-color: #0162ff;
+    --body-font: 'Gowun Dodum', sans-serif;
 }
 
 .header {
     display: flex;
     align-items: center;
-    transition: box-shadow 0.3s;
-    flex-shrink: 0;
     padding: 0 20px;
     white-space: nowrap;
     background-color: var(--header-bg-color);
     height: 60px;
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     justify-content: space-between;
 }
 
 .header-menu{
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     display: grid;
+}
+
+.header-menu a{
+    text-decoration: none;
+    color: var(--body-color);
+    font-weight: 500;
+}
+
+.header-menu a:hover{
+    color:var(--active-color);
 }
 
 .logo {
@@ -45,4 +46,57 @@ body {
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
+}
+
+.dark-light svg {
+    margin-right: 8px;
+    width: 22px;
+    cursor: pointer;
+    fill: transparent;
+    transition: 0.5s;
+}
+
+.user-settings {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
+
+.user-settings svg {
+    width: 20px;
+    color: #94949f;
+}
+
+.user-menu {
+    position: relative;
+    margin-right: 8px;
+    padding-right: 8px;
+    border-right: 2px solid #d6d6db;
+}
+
+/*.user-menu:before{*/
+/*    position: absolute;*/
+/*    content: "";*/
+/*    width: 7px;*/
+/*    height: 7px;*/
+/*    border-radius: 50%;*/
+/*    border: 2px solid var(--header-bg-color);*/
+/*    right: 6px;*/
+/*    top: -1px;*/
+/*    background-color: var(--active-color);*/
+/*}*/
+.user-profile {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+body {
+    background-color: var(--body-bg-color);
+    font-size: 15px;
+    color: var(--body-color);
+    font-family: var(--body-font);
+    margin: 0px;
 }
