--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,10 +17,17 @@
                 <a href="#">회원가입</a>
                 <a href="#"></a>
             </div>
-            <div class="user">
-
+            <div class="user-settings">
+                <div class="dark-light">
+                    <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path></svg>
+                </div>
+                <div class="user-menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-square">
+                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
+                </div>
+                <div class="user-name">Suhayel Nasim</div>
             </div>
         </div>
-
     </body>
 </html>
