--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="header">
             <div class="logo">
-                <a href="/"><img src="images/logo.png"></a>
+                <a href="/"><img src="images/logo2.png"><label>eduG</label></a>
             </div>
             <div class="header-menu">
                 <a href="#" class="active">로그인</a>
@@ -29,5 +29,7 @@
                 <div class="user-name">Suhayel Nasim</div>
             </div>
         </div>
+
+        <script src="js/index.js"></script>
     </body>
 </html>
