--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -13,10 +13,15 @@
     --body-font: 'Gowun Dodum', sans-serif;
 }
 
+.dark-mode {
+    --body-bg-color: #1d1d1d;
+    --header-bg-color: #1c1c24;
+    --body-color: #fff;
+}
 .header {
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 30px;
     white-space: nowrap;
     background-color: var(--header-bg-color);
     height: 60px;
@@ -48,12 +53,30 @@
     cursor: pointer;
 }
 
+.logo a{
+    text-decoration: none;
+    color: var(--body-color);
+    display: flex;
+}
+
+.logo a label{
+    margin-left: 10px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+}
+
 .dark-light svg {
     margin-right: 8px;
     width: 22px;
     cursor: pointer;
     fill: transparent;
     transition: 0.5s;
+}
+
+.dark-mode .dark-light svg {
+    fill: #ffce45;
+    stroke: #ffce45;
 }
 
 .user-settings {
