--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                 <a href="/"><img src="images/logo2.png"><label>eduG</label></a>
             </div>
             <div class="header-menu">
-                <a href="#" class="active">로그인</a>
+                <a href="/auth/login" class="active">로그인</a>
                 <a href="#">회원가입</a>
                 <a href="#"></a>
             </div>
