로그인 페이지 구현완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="header">
             <div class="logo">
-                <a href="/"><img src="images/logo2.png"><label>eduG</label></a>
+                <a href="/"><img src="images/logo.png"><label>eduG</label></a>
             </div>
             <div class="header-menu">
                 <a href="/auth/login" class="active">로그인</a>
