--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -50,9 +50,72 @@ body {
     border-radius: 20px 0 0 20px;
 }
 
+#logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-user-drag: none;
+    max-width: 70%;
+    max-height: 70%;
+}
+
 .loginArea #right {
     position: absolute;
     left: 40%;
     width: 60%;
     height: 100%;
+}
+
+#right label{
+    position: absolute;
+    font-family: var(--body-font);
+    font-size: 1.3vw;
+    left: 41%;
+    top: 10%;
+}
+
+#right #_id {
+    position: absolute;
+    left: 20%;
+    top: 35%;
+    width: 60%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 5px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+    font-family: var(--body-font);
+}
+
+#right #_pwd {
+    position: absolute;
+    left: 20%;
+    top: 47%;
+    width: 60%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 5px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+    font-family: var(--body-font);
+}
+
+#right #btn_login {
+    position: absolute;
+    font-size: 1.1vw;
+    white-space : nowrap;
+    overflow : hidden;
+    text-overflow : ellipsis;
+    font-family: var(--body-font);
+    left: 37%;
+    top: 65%;
+    width: 25%;
+    height: 8%;
+    color: white;
+    background-color: rgb(120, 161, 226);
+    border-radius: 15px;
+    border-color: rgb(120, 161, 226);
 }
