--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -10,14 +10,15 @@
 <body>
     <div class="loginArea">
         <div id="left">
-
+            <img id="logo" src="../images/login_logo.png">
         </div>
         <div id="right">
-            로그인
+            <label>로그인</label>
             <form method="post" action="/auth/loginProc">
-                <input name="username" type="text" placeholder="아이디"><br>
-                <input name="password" type="password" placeholder="비밀번호">
+                <input id="_id" name="username" type="text" placeholder="아이디"><br>
+                <input id="_pwd" name="password" type="password" placeholder="비밀번호">
             </form>
+            <button id="btn_login">로그인</button>
         </div>
     </div>
 </body>
