--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -21,5 +21,7 @@
             <button id="btn_login">로그인</button>
         </div>
     </div>
+
+    <script src="../js/auth.js"></script>
 </body>
 </html>
