--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -3,9 +3,35 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="//code.jquery.com/jquery-3.5.1.js"></script>
+    <link href="../css/signup.css" rel="stylesheet" type="text/css">
+    <title>회원가입</title>
 </head>
 <body>
-    SIGNUP PAGE
+    <div class="signupArea">
+        <div id="left">
+            <p>회원가입</p>
+            <form>
+                <input name="_id" id="_id" type="text" placeholder="아이디">
+                <input name="_pwd" id="_pwd" type="password" placeholder="비밀번호">
+                <input name="_pwdCheck" id="_pwdCheck" type="password" placeholder="비밀번호 확인">
+                <input name="_nickname" id="_nickname" type="text" placeholder="닉네임">
+                <input name="_dept" id="_dept" type="text" placeholder="학과">
+                <input name="_stdNumber" id="_stdNumber" type="text" placeholder="학번">
+                <input name="_name" id="_name" type="text" placeholder="이름">
+                <input name="_tel" id="_tel" type="text" placeholder="전화번호">
+                <select name="_sex" id="_sex">
+                    <option value="">성별</option>
+                    <option value="남자">남자</option>
+                    <option value="여자">여자</option>
+                </select>
+            </form>
+            <button id="btn_join" type="button">회원가입</button>
+            <button id="btn_back" type="button" onclick="history.back()">취소</button>
+        </div>
+        <div id="right">
+            <img id="logo" src="../images/login_logo.png">
+        </div>
+    </div>
 </body>
 </html>
