--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,8 @@
                 <a href="/"><img src="images/logo.png"><label>eduG</label></a>
             </div>
             <div class="header-menu">
-                <a href="/auth/login" class="active">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#"></a>
+                <a href="/auth/login">로그인</a>
+                <a href="/auth/signup">회원가입</a>
             </div>
             <div class="user-settings">
                 <div class="dark-light">
