--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -37,8 +37,8 @@ body {
     top: 50%;
     left: 50%;
     transform:  translate(-50%, -50%);
-    width: 40%;
-    height: 50%;
+    width: 50%;
+    height: 70%;
     border-radius: 20px;
 }
 
@@ -46,6 +46,163 @@ body {
     position: absolute;
     width: 60%;
     height: 100%;
+}
+
+#left p {
+    position: absolute;
+    color: grey;
+    font-size: 1.4vw;
+    left: 42%;
+    top: 0%;
+}
+
+#left #_id {
+    position: absolute;
+    left: 20%;
+    top: 15%;
+    width: 60%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_pwd {
+    position: absolute;
+    left: 20%;
+    top: 26%;
+    width: 28%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_pwdCheck {
+    position: absolute;
+    left: 52%;
+    top: 26%;
+    width: 28%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_nickname {
+    position: absolute;
+    left: 20%;
+    top: 37%;
+    width: 60%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_name {
+    position: absolute;
+    left: 20%;
+    top: 52%;
+    width: 32%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 8%;
+}
+
+#left #_sex {
+    position: absolute;
+    left: 56%;
+    top: 52%;
+    width: 24%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_dept {
+    position: absolute;
+    left: 20%;
+    top: 63%;
+    width: 32%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_stdNumber {
+    position: absolute;
+    left: 56%;
+    top: 63%;
+    width: 24%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 5%;
+}
+
+#left #_tel {
+    position: absolute;
+    left: 20%;
+    top: 74%;
+    width: 60%;
+    height: 7%;
+    font-size: 1.2vw;
+    border: 0px;
+    border-bottom: solid 4px #78A1E2;
+    outline: none;
+    text-indent: 3%;
+}
+
+#left #btn_join {
+    position: absolute;
+    font-size: 1.1vw;
+    white-space : nowrap;
+    overflow : hidden;
+    text-overflow : ellipsis;
+    left: 48%;
+    top: 88%;
+    width: 25%;
+    height: 7%;
+    color: white;
+    background-color: rgb(120, 161, 226);
+    border-radius: 15px;
+    border-color: rgb(120, 161, 226);
+}
+
+#left #btn_back {
+    position: absolute;
+    font-size: 1.1vw;
+    white-space : nowrap;
+    overflow : hidden;
+    text-overflow : ellipsis;
+    left: 76%;
+    top: 88%;
+    width: 16%;
+    height: 7%;
+    color: white;
+    background-color: rgb(120, 161, 226);
+    border-radius: 15px;
+    border-color: rgb(120, 161, 226);
 }
 
 .signupArea #right {
