--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -12,10 +12,9 @@
         <div id="left">
             <p>회원가입</p>
             <form>
-                <input name="_id" id="_id" type="text" placeholder="아이디">
+                <input name="_username" id="_username" type="text" placeholder="아이디">
                 <input name="_pwd" id="_pwd" type="password" placeholder="비밀번호">
                 <input name="_pwdCheck" id="_pwdCheck" type="password" placeholder="비밀번호 확인">
-                <input name="_nickname" id="_nickname" type="text" placeholder="닉네임">
                 <input name="_dept" id="_dept" type="text" placeholder="학과">
                 <input name="_stdNumber" id="_stdNumber" type="text" placeholder="학번">
                 <input name="_name" id="_name" type="text" placeholder="이름">
@@ -33,5 +32,6 @@
             <img id="logo" src="../images/login_logo.png">
         </div>
     </div>
+    <script src="../js/auth.js"></script>
 </body>
 </html>
