로그인 및 회원가입 함수 구현완료

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,10 +15,10 @@
         <div id="right">
             <label>로그인</label>
             <form method="post" action="/auth/loginProc">
-                <input id="_id" name="username" type="text" placeholder="아이디"><br>
-                <input id="_pwd" name="password" type="password" placeholder="비밀번호">
+                <input id="username" name="username" type="text" placeholder="아이디"><br>
+                <input id="password" name="password" type="password" placeholder="비밀번호">
+                <button id="btn_login">로그인</button>
             </form>
-            <button id="btn_login">로그인</button>
         </div>
     </div>
 
