--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -75,7 +75,7 @@ body {
     top: 10%;
 }
 
-#right #_id {
+#right #username {
     position: absolute;
     left: 20%;
     top: 35%;
@@ -89,7 +89,7 @@ body {
     font-family: var(--body-font);
 }
 
-#right #_pwd {
+#right #password {
     position: absolute;
     left: 20%;
     top: 47%;
