--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -25,7 +26,13 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-square">
                         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
                 </div>
-                <div class="user-name">Suhayel Nasim</div>
+                <div class="user-name">
+                    <label sec:authorize-expr="isAuthenticated()" sec:authentication="name"></label>
+                    <label sec:authorize="isAnonymous()">비로그인 유저</label>
+                </div>
+<!--                <div th:unless="" class="user-name">-->
+<!--                    이미지-->
+<!--                </div>-->
             </div>
         </div>
 
