--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,9 @@
                 <a href="/"><img src="images/logo.png"><label>eduG</label></a>
             </div>
             <div class="header-menu">
-                <a href="/auth/login">로그인</a>
-                <a href="/auth/signup">회원가입</a>
+                <a sec:authorize="isAnonymous()" href="/auth/login">로그인</a>
+                <a sec:authorize="isAnonymous()" href="/auth/signup">회원가입</a>
+                <a sec:authorize="isAuthenticated()" href="/logout">로그아웃</a>
             </div>
             <div class="user-settings">
                 <div class="dark-light">
@@ -27,12 +28,9 @@
                         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg>
                 </div>
                 <div class="user-name">
-                    <label sec:authorize-expr="isAuthenticated()" sec:authentication="name"></label>
+                    <label sec:authorize="isAuthenticated()" sec:authentication="name"></label>
                     <label sec:authorize="isAnonymous()">비로그인 유저</label>
                 </div>
-<!--                <div th:unless="" class="user-name">-->
-<!--                    이미지-->
-<!--                </div>-->
             </div>
         </div>
 
