반환 데이터 파싱 TEST

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,10 @@
             </div>
         </div>
 
+        <div class="">
+            <input type="text" name="qeustion" id="qeustion">
+            <button id="btn_qeustion">GPT</button>
+        </div>
         <script src="js/index.js"></script>
     </body>
 </html>
