list 활용해서 text 뽑아오기 성공, 단 문자열 필터링 필요

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,9 @@
         </div>
 
         <div class="">
-            <input type="text" name="qeustion" id="qeustion">
+            <input type="text" name="qeustion" id="qeustion"><p>
+            <label>답변:</label><p>
+            <textarea id="answer" name="answer"></textarea>
             <button id="btn_qeustion">GPT</button>
         </div>
         <script src="js/index.js"></script>
