--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,10 +34,11 @@
             </div>
         </div>
 
-        <div class="">
+        <div class="QA">
+            <labe>질문: </labe><p>
             <input type="text" name="qeustion" id="qeustion"><p>
             <label>답변:</label><p>
-            <textarea id="answer" name="answer"></textarea>
+            <textarea id="answer" name="answer" readonly="true"></textarea><p>
             <button id="btn_qeustion">GPT</button>
         </div>
         <script src="js/index.js"></script>
