컨트롤러 및 서비스단 리펙터링

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -126,6 +126,7 @@ body {
     width: 30%;
     height: 5%;
     font-family: var(--body-font);
+    padding: 0pt 10pt 0pt 10pt;
 }
 
 #answer {
@@ -135,6 +136,7 @@ body {
     height: 30%;
     resize: none;
     font-family: var(--body-font);
+    padding: 10px;
 }
 
 #btn_qeustion {
