--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -32,8 +32,10 @@
 }
 
 .header-menu{
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 0fr);
     display: grid;
+    grid-column-gap: 12px;
+    text-align: center;
 }
 
 .header-menu a{
