--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,8 @@
                 <a sec:authorize="isAnonymous()" href="/auth/login">로그인</a>
                 <a sec:authorize="isAnonymous()" href="/auth/signup">회원가입</a>
                 <a sec:authorize="isAuthenticated()" href="/logout">로그아웃</a>
+                <a sec:authorize="isAuthenticated()" href="/">Q&A</a>
+                <a sec:authorize="isAuthenticated()" href="/chat">Chat</a>
             </div>
             <div class="user-settings">
                 <div class="dark-light">
