--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -1,39 +1,71 @@
-.chat-window {
-    width: 400px;
-    height: 500px;
-    border: 1px solid black;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.chat-messages {
-    height: 400px;
+body {
+    background-color: #f5f5f5;
+}
+
+.chat-content {
+    height: 350px;
     overflow-y: scroll;
 }
 
-.message {
-    background-color: #f1f0f0;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    display: inline-block;
-}
-
-.chat-input {
-    margin-top: 20px;
-}
-
-.chat-input form {
+.line {
     display: flex;
 }
 
-.chat-input input {
-    flex: 1;
+.chat-box {
+    background: #B2CCFF;
     padding: 10px;
+    max-width: 200px;
+    margin: 10px;
+    font-size: 20px;
+    border-radius: 7px;
+    word-wrap: break-word;
 }
 
-.chat-input button {
+.mine {
+    background: #fff;
     padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    max-width: 200px;
+    margin: 10px;
+    font-size: 20px;
+    border-radius: 7px;
+    word-wrap: break-word;
+    margin-left: auto;
+}
+
+.input_area {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#input {
+    padding: 8px;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*align-items: center;*/
+    /*background-color: #f5f5f5;*/
+    /*border-top: 1px solid #ddd;*/
+    width: 70%;
+    height: auto;
+    font-size: 20px;
+}
+
+#send {
+    background-color: #0275d8;
     border: none;
+    border-radius: 7px;
+    color: #fff;
+    padding: 10px 15px;
+    font-size: 19px;
     cursor: pointer;
+    /*transition: background-color 0.2s ease-in-out;*/
+}
+
+#sned:hover {
+    background-color: #01447e;
 }
