--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,10 +8,15 @@
 
 body {
     background-color: #f5f5f5;
+    font-family: var(--body-font);
+}
+
+:root {
+    --body-font: 'Gowun Dodum', sans-serif;
 }
 
 .chat-content {
-    height: 350px;
+    height: 80%;
     overflow-y: scroll;
 }
 
@@ -45,14 +52,10 @@ body {
 
 #input {
     padding: 8px;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
-    /*align-items: center;*/
-    /*background-color: #f5f5f5;*/
-    /*border-top: 1px solid #ddd;*/
-    width: 70%;
+    width: 40%;
     height: auto;
     font-size: 20px;
+    font-family: var(--body-font);
 }
 
 #send {
@@ -63,7 +66,7 @@ body {
     padding: 10px 15px;
     font-size: 19px;
     cursor: pointer;
-    /*transition: background-color 0.2s ease-in-out;*/
+    font-family: var(--body-font);
 }
 
 #sned:hover {
