ChatCompletion API JS creating

--- a/src/main/resources/templates/chatCompletion.html
+++ b/src/main/resources/templates/chatCompletion.html
@@ -40,34 +40,13 @@
 
       <div class="chat-window">
         <div class="chat_content">
-          <div class="line">
-            <span class="chat-box">안녕?</span>
-          </div>
-          <div class="line">
-            <span class="chat-box mine">안녕!</span>
-          </div>
         </div>
         <div class="chat-input">
-          <input type="text" placeholder="채팅을 입력하세요">
-          <button type="submit">전송</button>
+          <input id="input" type="text" placeholder="채팅을 입력하세요">
+          <button id="send" type="submit">전송</button>
         </div>
       </div>
 
-<!--      <div class ="chat-content">-->
-<!--        <div class="line">-->
-<!--          <span class="chat-box">안녕?</span>-->
-<!--        </div>-->
-<!--        <div class="line">-->
-<!--          <span class=" mine">안녕!</span>-->
-<!--        </div>-->
-<!--      </div>-->
-
-<!--      <div class="input_area">-->
-<!--        <input id="input" type="text" placeholder="채팅을 입력하세요">-->
-<!--        <button id="send">전송</button>-->
-<!--      </div>-->
-
-<!--    </div>-->
   <script src="js/chat.js"></script>
   </body>
 </html>
