--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -41,7 +41,7 @@ body {
 .chat-box {
     background: #B2CCFF;
     padding: 10px;
-    max-width: 200px;
+    max-width: 85%;
     margin: 10px;
     font-size: 15px;
     border-radius: 7px;
@@ -51,7 +51,7 @@ body {
 .mine {
     background: #eee;
     padding: 10px;
-    max-width: 200px;
+    max-width: 85%;
     margin: 10px;
     font-size: 15px;
     border-radius: 7px;
