CreateImage Api done

--- a/src/main/resources/templates/image.html
+++ b/src/main/resources/templates/image.html
@@ -49,9 +49,10 @@
       <div class="input-container">
         <label for="input">문장 입력:</label>
         <textarea id="input"></textarea>
+        <button id="send" type="submit">전송</button>
       </div>
       <div class="image-container">
-        <img src="#" alt="image">
+        <img id="show-img" src="#" alt="image">
       </div>
     </div>
 
