--- a/src/main/resources/static/css/image.css
+++ b/src/main/resources/static/css/image.css
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 20px;
     width: 35%;
     margin-top: 20px;
 }
@@ -30,13 +29,30 @@
     font-size: 17px;
 }
 
+.input-container button[type="submit"] {
+    background-color: #0275d8;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    /*transition: background-color 0.2s ease-in-out;*/
+    font-family: var(--body-font);
+}
+
+.input-container button[type="submit"]:hover {
+    background-color: #01447e;
+}
+
 .image-container {
-    width: 300px;
-    height: 300px;
+    width: 512px;
+    height: 512px;
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px;
 }
 
 .image-container img {
