--- a/capstone/flask/templates/test.html
+++ b/capstone/flask/templates/test.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//code.jquery.com/jquery-3.5.1.js"></script>
     <title>테스트 페이지</title>
 </head>
 <body>
     <h1>테스트 페이지 입니다.</h1>
+    
+    <!-- from 테스트용 -->
+    <form action = "/formData" method="post">
+        <input type="text" name="text">
+        <input type="submit" value="전송">
+    </form>
+    
+    <!-- json 테스트용 -->
     <input type="text" id="text">
     <button id="send_btn">전송</button><p>
     <label id="res"></label>
+
+    <script src="../static/js/test.js"></script>
 </body>
 </html>
