--- a/capstone/flask/templates/test.html
+++ b/capstone/flask/templates/test.html
@@ -19,7 +19,13 @@
     <!-- json 테스트용 -->
     <input type="text" id="text">
     <button id="send_btn">전송</button><p>
-    <label id="res"></label>
+    <label id="res"></label><p>
+
+    <!-- pickle 테스트용 -->
+    <h3>공부시간을 입력하면 점수를 예측해드립니다.</h3>
+    <input type="text" id="hour">
+    <button id="send_btn2">전송</button><p>
+    <label id="pre_res"></label>
 
     <script src="../static/js/test.js"></script>
 </body>
